@@ -1,0 +1,6 @@
+        .section        .init_array.01000,"aw",%progbits
+        .align  4
+        .word 0
+        .section        .fini_array.01000,"aw",%progbits
+        .align  4
+        .word 0
